--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ShowAllJsonObjectActivity">
+        <activity android:name=".DownloadingImageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShowJsonObjectActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".ShowAllJsonObjectActivity"></activity>
+        <activity android:name=".ShowJsonObjectActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
